# type_driven_search

./: .gitignore  Dockerfile  Makefile  README.md  benchmark.ml  dune  dune-project  index.ml  index.mli  parsers.ml  parsers.mli  signature.ml  signature.mli  signature_test.ml  stats.md  test.t  testability.ml  tests.ml  type_driven_search.ml  type_driven_search.opam
externs/: .gitignore  Makefile  camlite.c  compile_commands.in.json  fs.c  fs.h  fs_test.c  sqlite_test.c
externs/sql/: db_init.sql  query.sql
index/: binary_search.ml  binary_search_expect_tests.ml  binary_search_tests.ml  clangd_adapter.ml  clangd_adapter.mli  clangd_adapter_expect_tests.ml  dune  index.ml  index.mli  index_expect_tests.ml  index_tests.ml
signature/: dune  signature.ml  signature.mli  signature_tests.ml  testability.ml
test_resources/: clangd_index.yml  curses.h
utils/: compare.ml  dune  parsers.ml  parsers_tests.ml
