(executable
 (public_name type_driven_search)
 (name type_driven_search)
 (modules type_driven_search)
 (libraries index signature))

(executable
 (public_name benchmark)
 (name benchmark)
 (modules benchmark)
 (libraries index signature testability unix))

(library
 (name signature)
 (package type_driven_search)
 (modules signature)
 (libraries compare parsers))

(library
 (name parsers)
 (package type_driven_search)
 (modules parsers)
 (libraries))

(library
 (name compare)
 (package type_driven_search)
 (modules compare)
 (libraries))

(library
 (name index)
 (package type_driven_search)
 (modules index)
 (libraries compare signature))

(library
 (name testability)
 (modules testability)
 (libraries index signature))

(tests
 (names tests)
 (modules tests)
 (libraries alcotest index parsers signature testability))

(cram
 (deps %{bin:type_driven_search}))
