(executable
 (public_name type_driven_search)
 (name type_driven_search)
 (modules type_driven_search)
 (libraries index signature))

(executable
 (public_name benchmark)
 (name benchmark)
 (modules benchmark)
 (libraries index signature testability unix))

(library
 (name signature)
 (package type_driven_search)
 (modules signature)
 (libraries compare parsers))

(library
 (name parsers)
 (package type_driven_search)
 (modules parsers)
 (libraries))

(library
 (name compare)
 (package type_driven_search)
 (modules compare)
 (libraries))

(library
 (name index)
 (package type_driven_search)
 (modules index)
 (libraries compare signature)
 (foreign_archives fs))

(library
 (name testability)
 (modules testability)
 (libraries index signature))

(tests
 (names tests)
 (modules tests)
 (libraries alcotest index parsers signature testability))

(data_only_dirs externs)

(rule
 (deps ; Declare the dependencies of the custom rule, this is what triggers rebuilding on change 
  (source_tree externs) ; Declare each file of 'externs' as a dependency
  )
 (targets libfs.a dllfs.so) ; Declare the outputs of the custom rule, we must ensure they are indeed produce
 (action
  (no-infer
   (progn ; A sequence of actions
    (chdir
     externs ; Run the following action in 'externs', after action finishes the current directory is restored
     (run make libfs.a libfs.so) ; Raw command, the meat of the rule
     )
    (copy externs/libfs.a libfs.a) ; match above-declared targets
    (copy externs/libfs.so dllfs.so)))))

(cram
 (deps %{bin:type_driven_search}))
