(data_only_dirs externs)

(rule
 (deps ; Declare the dependencies of the custom rule, this is what triggers rebuilding on change 
  (source_tree externs) ; Declare each file of 'externs' as a dependency
  )
 (targets libfs.a dllfs.so libcamlite.a dllcamlite.so) ; Declare the outputs of the custom rule, we must ensure they are indeed produce
 (action
  (no-infer
   (progn ; A sequence of actions
    (chdir
     externs ; Run the following action in 'externs', after action finishes the current directory is restored
     (run make libfs.a libfs.so libcamlite.a libcamlite.so) ; Raw command, the meat of the rule
     )
    (copy externs/libfs.a libfs.a) ; match above-declared targets
    (copy externs/libfs.so dllfs.so)
    (copy externs/libcamlite.a libcamlite.a)
    (copy externs/libcamlite.so dllcamlite.so)))))

(cram
 (deps %{bin:type_driven_search} test_resources/curses.h))
