(library
 (name index)
 (package type_driven_search)
 (modules index)
 (libraries binary_search compare signature)
 (foreign_archives ../fs))

(library
 (name binary_search)
 (package type_driven_search)
 (modules binary_search)
 (libraries))

(tests
 (names index_tests)
 (modules index_tests)
 (libraries alcotest index signature testability))

(library
 (name binary_search_expect_tests)
 (modules binary_search_expect_tests)
 (libraries binary_search)
 (inline_tests)
 (preprocess
  (pps ppx_expect)))
