(library
 (public_name type_driven_search.index)
 (name index)
 (modules index)
 (libraries binary_search compare signature)
 (foreign_archives ../fs ../camlite))

(library
 (name binary_search)
 (package type_driven_search)
 (modules binary_search)
 (libraries))

(tests
 (names index_tests)
 (modules index_tests)
 (libraries alcotest index signature testability))

(library
 (name index_expect_tests)
 (modules index_expect_tests)
 (libraries index)
 (inline_tests)
 (preprocess
  (pps ppx_expect)))

(tests
 (names binary_search_tests)
 (modules binary_search_tests)
 (libraries alcotest binary_search))

(library
 (name binary_search_expect_tests)
 (modules binary_search_expect_tests)
 (libraries binary_search)
 (inline_tests)
 (preprocess
  (pps ppx_expect)))
