(library
 (public_name type_driven_search.index)
 (name index)
 (modules index)
 (libraries binary_search compare signature unix)
 (foreign_archives ../camlite))

(library
 (name clangd_adapter)
 (modules clangd_adapter)
 (libraries compare signature)
 (preprocess
  (pps ppx_deriving_yaml)))

(library
 (name clangd_adapter_expect_tests)
 (modules clangd_adapter_expect_tests)
 (libraries clangd_adapter)
 (inline_tests
  (deps ../test_resources/clangd_index.yml))
 (preprocess
  (pps ppx_expect)))

(library
 (name binary_search)
 (package type_driven_search)
 (modules binary_search)
 (libraries))

(tests
 (names index_tests)
 (modules index_tests)
 (libraries alcotest index signature testability))

(library
 (name index_expect_tests)
 (modules index_expect_tests)
 (libraries index)
 (inline_tests)
 (preprocess
  (pps ppx_expect)))

(tests
 (names binary_search_tests)
 (modules binary_search_tests)
 (libraries alcotest binary_search))

(library
 (name binary_search_expect_tests)
 (modules binary_search_expect_tests)
 (libraries binary_search)
 (inline_tests)
 (preprocess
  (pps ppx_expect)))
